--- a/src/shared/components/buttons/standard/default.scss
+++ b/src/shared/components/buttons/standard/default.scss
@@ -11,20 +11,38 @@
 .button {
   @include tc-label-lg;
 
+  align-items: center;
   background: $tc-white;
   border: solid 1px $tc-gray-30;
   border-radius: 4px;
   display: inline-block;
-  height: 40px;
+  min-height: 40px;
   margin: 5px;
-  padding: 0 25px;
-  line-height: 38px;
+  padding: 5px 25px;
   text-align: center;
+  vertical-align: middle;
+}
+
+.buttonContent {
+  display: table-cell;
+  height: 100%;
+  vertical-align: middle;
 }
 
 /* Additional styling for a disabled button. */
 .disabled {
+  display: inline-table;
   opacity: 0.3;
+}
+
+.link {
+  display: inline-table;
+
+  /* To prevent different styling of the button-like link once it has been
+   * visited. */
+  &:visited {
+    @include tc-label-lg;
+  }
 }
 
 /* .link and .regular classes are applied only to active button-like links,
@@ -49,35 +67,26 @@
   }
 }
 
-/* To prevent different styling of the button-like link once it has been
- * visited. */
-.link:visited {
-  @include tc-label-lg;
-}
-
 /* And a few extra classes to support XS, SM and LG sizes. */
 
 .xs {
   @include tc-label-sm;
 
   border-radius: 2px;
-  height: 20px;
-  line-height: 18px;
-  padding: 0 15px;
+  min-height: 20px;
+  padding: 1.5px 15px;
 }
 
 .sm {
   @include tc-label-md;
 
-  height: 30px;
-  line-height: 28px;
-  padding: 0 20px;
+  min-height: 30px;
+  padding: 4px 20px;
 }
 
 .lg {
   @include tc-label-xl;
 
-  height: 50px;
-  line-height: 48px;
-  padding: 0 30px;
+  min-height: 50px;
+  padding: 5px 30px;
 }
